--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,8 @@
     <packaging>pom</packaging>
     <name>CodinGame</name>
     <modules>
-        <module>horseRacingDual</module>
+        <module>easy/horseRacingDual</module>
+        <module>medium/StockExchangeLosses</module>
     </modules>
     <build>
         <plugins>
