nuage de tag MDF 2015

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>medium/PhoneNumbers</module>
         <module>simpleTree</module>
         <module>pokerMDF</module>
+        <module>nuageDeTag</module>
     </modules>
     <build>
         <plugins>
