--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>simpleTree</module>
         <module>pokerMDF</module>
         <module>nuageDeTag</module>
+        <module>salesforce</module>
     </modules>
     <build>
         <plugins>
