trending topics MDF 2015

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>pokerMDF</module>
         <module>nuageDeTag</module>
         <module>salesforce</module>
+        <module>trendingTopics</module>
     </modules>
     <build>
         <plugins>
