--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Compiled class file
-*.class
+target/
 
 # Log file
 *.log
@@ -11,7 +11,6 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
 *.war
 *.ear
 *.zip
